@@ -1,3 +1,10 @@
+2007-02-06  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/widgets/entry.py (ProxyEntry.read): 
+	* tests/test_Entry.py (EntryTest.testRead): 
+	Return ValueUnset when the entry is empty instead
+	of an empty string.
+
 2007-02-04  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi.spec (Requires): 
